# Ahti

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  buildscript  modules
Docker/deb/: Dockerfile
Docker/ubuntu/: Dockerfile
doc/: .gitignore  Ahti.org  Doxyfile
include/: CMakeLists.txt
include/communication/: Ring.hpp
include/config/: Config1D.hpp
include/containers/: Array1D.hpp  Array2D.hpp  Array3D.hpp
include/debug/: DebugDef.h
include/grid/: CGrid.hpp  Globalgrid.h  Grid.hpp  GridControl.h  GridControl.hpp  LocalGrid.hpp  Localgrid.h  Localgrid.hpp  SimConf.h  SimConf.hpp
include/master/: Master.h  Master.hpp
include/math/: CMultFFTW.hpp  COperators.hpp  CartToSpherical.hpp  CoeffEv.hpp  Factorial.hpp  FourierCoeff.hpp  Integration1D.hpp  NormGrid.hpp  Operators1D.hpp  Operators2D.hpp  Operators3D.hpp  RecontructWV.hpp  ScalarProd.h  TimeFt.h  ValsEv.hpp
include/output/: SaveCoeff.hpp  SaveGrid2D.hpp  SaveGrid3D.hpp  SaveStep.hpp
include/potentials/: HarmOsc1D.hpp
include/quantumsystems/: Harmonicoscillator.hpp  Hydrogen.hpp  dist-harm-osc.hpp
include/solvers/: Split_Solver_1D.hpp  Split_Solver_2D.hpp  Split_Solver_3D.hpp  StaticCalcs1D.hpp  StaticCalcs2D.hpp  StaticCalcs3D.hpp
include/testfunctions/: Gaussian.hpp
include/testfunctors/: Gaussian.hpp
include/tests/: CMakeLists.txt  FourierTests.cpp  Fouriertests.cpp  Send_recv_test.cpp  TimeEvTests.cpp
include/timeconf/: Timeconf.hpp
include/worker/: Master.h  SerialWorker.hpp  SerialWorker1D.hpp  SerialWorker2D.hpp  SerialWorker3D.hpp  StaticCalcs.hpp  StaticCalcs1D.hpp  StaticCalcs2D.hpp  StaticCalcs3D.hpp  TimeEv.hpp  Worker.h  Worker.hpp
src/: CMakeLists.txt  main.cpp  main.cu
src/quantumsystems/: Harmonicoscillator.cpp  Hydrogen.cpp  dist-harm-osc.cpp
tests/: Array2DTest.cpp  CMakeLists.txt  ContainerTest.cpp  FFTWmultest.cpp  FourierTests.cpp  GridTest.cpp  HydrogenTests.cpp  IOTest.cpp  OperatorsTest.cpp  ProductTest.cpp  SphericalTests.cpp  runtests.cpp
utils/: CMakeLists.txt  build-manual.sh  install_omp_fftw.sh
utils/cmake/: FindFFTW.cmake
utils/pyvis/: 1D_Time_Evolution.ipynb  Disturbed_TIme_Evolution_3D.ipynb  Disturbed_Time_Evolution_2D.ipynb  Disturbed_Time_Evolution_3D.ipynb  Hydrogen_Error_Function.ipynb  Isosurfaces.ipynb  Loader2D.py  Loader3D.py  Static evolution visualizer.ipynb  Static-evolution-visualizer.ipynb  TimeEvolution2D.py  TimeProp_diagonal_scheme.py  fileloader.py  pyevo.py  spherical.py
utils/pyvis/.ipynb_checkpoints/: Static evolution visualizer-checkpoint.ipynb
